--- a/35influencers.html
+++ b/35influencers.html
@@ -13,6 +13,7 @@
  
 jQuery(document).ready(function() {
     var randomStart = Math.floor(4*Math.random());
+    $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
         wrap: "both",
