--- a/35influencers.html
+++ b/35influencers.html
@@ -30,14 +30,14 @@ jQuery(document).ready(function() {
         <div class="photo">
             <img src="http://a0.twimg.com/profile_images/1108988880/photo2_reasonably_small.jpg" width="128" height="128" alt="" />
             <p><strong>Craig Kanalley</strong><br/>
-                <a href="http://www.twitter.com/ckanal">@ckana</a><br/>
+                <a href="http://www.twitter.com/ckanal">@ckanal</a><br/>
                 <a href="http://www.craigkanalley.com/">craigkanalley.com</a>
             </p>
         </div>
         <div class="text">
             <p><strong>Twitter bio: </strong>Traffic &amp; Trends Editor for The Huffington Post. Founded @BreakingTweets. Into tech/journalism, social media, hockey, &amp; genealogy.</p>
-            <p><strong>Nomination by <a href="http://www.twitter.com/myersnews"> @myersnews </a></strong></p>
-            <p>"... in 2009, I heard about Craig Kanalley's website, Breaking Tweets, which used Twitter as a reporting source. Writers placed tweets in their stories in the same way traditional reporters would quote sources. Besides illustrating how journalists could use social media to find sources and gauge reaction to a news event, it was an innovative way to integrate social media into narrative journalism." -- Steve Myers<br /><br />"He leverages real-time updates &amp; community building in social media very well" -- <a href="http://twitter.com/#!/petersmeg">Meghan Peters (@petersmeg)</a></p>
+            <p><strong>Nominated by Steve Myers (@myersnews) and Meghan Peters (@Petersmeg)</strong></p>
+            <p>"... in 2009, I heard about Craig Kanalley's website, Breaking Tweets, which used Twitter as a reporting source. Writers placed tweets in their stories in the same way traditional reporters would quote sources. Besides illustrating how journalists could use social media to find sources and gauge reaction to a news event, it was an innovative way to integrate social media into narrative journalism." -- <a href="http://twitter.com/#!/myersnews/status/25724140657">Steve Myers</a><br /><br />"He leverages real-time updates &amp; community building in social media very well" -- <a href="http://twitter.com/#!/petersmeg">Meghan Peters</a></p>
         </div>
     </li>
 <li>
@@ -50,7 +50,7 @@ jQuery(document).ready(function() {
     </div>
     <div class="text">
         <p><strong>Twitter bio: </strong>Always doing some kind of journalism training (multimedia, online), somewhere in the world.</p>
-        <p><strong>Nomination by Tish Grier and Nan Connelly</strong></p>
+        <p><strong>Nominated by Tish Grier and Nan Connelly</strong></p>
         <p><a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=148311165208907&comments">Mindy McAdams been a real innovator too. She was teaching video editing to her classes way before it was popular." -- Tish Grier<br/><br/>"She leads, inspires, writes and teaches." -- Nan Connelly  </a></p>
     </div>
 </li>
