More copyediting to have nomination linked from name at end of quote only.

--- a/35influencers.html
+++ b/35influencers.html
@@ -51,7 +51,7 @@ jQuery(document).ready(function() {
     <div class="text">
         <p><strong>Twitter bio: </strong>Always doing some kind of journalism training (multimedia, online), somewhere in the world.</p>
         <p><strong>Nominated by Tish Grier and Nan Connelly</strong></p>
-        <p><a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=148311165208907&comments">Mindy McAdams been a real innovator too. She was teaching video editing to her classes way before it was popular." -- Tish Grier<br/><br/>"She leads, inspires, writes and teaches." -- Nan Connelly  </a></p>
+        <p>Mindy McAdams been a real innovator too. She was teaching video editing to her classes way before it was popular." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=148311165208907&comments">Tish Grier</a><br/><br/>"She leads, inspires, writes and teaches." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=148311165208907&comments">Nan Connelly</a></p>
     </div>
 </li>
 <li>
