added Craig Kanalley.

--- a/35influencers.html
+++ b/35influencers.html
@@ -12,7 +12,7 @@
 <script type="text/javascript"> 
  
 jQuery(document).ready(function() {
-    var randomStart = Math.floor(4*Math.random());
+    var randomStart = Math.floor(5*Math.random());
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -70,6 +70,22 @@ jQuery(document).ready(function() {
         <br/><br/>
         "<strong>Sarah's </strong>energy and entrepreneurial spirit are inspiring. I first "met" Sarah after tuning in to one of the first #journchat sessions (which she helped launch). Her approach to sharing news and working with others using social media have helped her to be a credible, informative and fun voice to that many look to for guidance about the future of journalism." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=422518584332">Ellyn Angelotti</a>
         </p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/490942187/andy-recent.jpg" width="128" height="128" alt="" />
+        <p><strong>Andy Carvin</strong><br/>
+            <a href="http://www.twitter.com/acarvin">@acarvin</a><br/>
+            <a href="http://www.andycarvin.com">andycarvin.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio:</strong>Senior strategist at NPR. Online community organizer since 1994. Former director of the Digital Divide Network. Blogger. Photographer. Dad. </p>
+
+<p><strong> Nominated by Alicia Stewart (@ombudsman), Anne Verwiebe (@monkeygrrl), Sarah Fidelibus (@verbalcupcake) and Mandy Jenkins (@mjenkins)</strong> </p>
+        <p>Andy Carvin is senior strategist on NPR's Social Media Desk, and he has a long history of experimenting with ways social media can be used not just by news organizations, but by citizens wanting to improve the world.  A great example of that history can be viewed in Carvin's TED talk, "The New Volunteers: Social Media, Disaster Response And You," in which he details -- through his firsthand experiences -- the evolution of online tools that help mobilize volunteers with a variety of skill sets to take action during crisis situations. After watching that video, even Malcolm Gladwell would be hard-pressed to continue to believe that social media tools have little effect in creating social change. Carvin's talk is inspiring, informative, engaging -- all the characteristics one would expect from a bright mind like his. -- <a href="http://sarahfidelibus.posterous.com/my-picks-for-poynters-p35-influential-people">Sarah Fidelibus</a></p>
     </div>
 </li>
 
