--- a/35influencers.html
+++ b/35influencers.html
@@ -2,7 +2,7 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us">
 <head>
-<title>Edge of Change</title>
+<title>35 Influencers in Social Media</title>
 
 <script type="text/javascript" src="jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="jquery.jcarousel.min.js"></script>
