Changed start position to last item instead of random.

--- a/35influencers.html
+++ b/35influencers.html
@@ -12,7 +12,8 @@
 <script type="text/javascript"> 
  
 jQuery(document).ready(function() {
-    var randomStart = Math.floor(5*Math.random());
+    // var randomStart = Math.floor(5*Math.random());
+    var randomStart = 4;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
