--- a/35influencers.html
+++ b/35influencers.html
@@ -12,8 +12,8 @@
 <script type="text/javascript"> 
  
 jQuery(document).ready(function() {
-    var randomStart = Math.floor(12*Math.random());
-    // var randomStart = 4;    
+    // var randomStart = Math.floor(12*Math.random());
+    var randomStart = 6;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -120,6 +120,8 @@ jQuery(document).ready(function() {
     </div>
 </li>
 
+<!--
+
 <li>
     <div class="photo">
         <img src="http://a3.twimg.com/profile_images/63507895/lavrusik__vadim_reasonably_small.JPG" width="128" height="128" alt="" />
@@ -194,6 +196,8 @@ jQuery(document).ready(function() {
         <p>Director of Community Engagement at <a href="http://www.tbd.com">TBD</a>: Steve's had an outstanding WordPress blog since Dec. 2008, and a stellar Twitter feed to go along with it, focusing on the ever-evolving nature of communication in our society and how the digital age has affected journalism. His social media tips and advice are often second-to-none and they were part of the inspiration behind my launching TwitterJournalism.com. Even though he was in Iowa, and now in D.C., and we've never met face-to-face (yet), he's had a profound impact on me and the way I think about social media. Especially with his current job -- community engagement -- he always has me thinking about new ways to engage folks and build community. -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=436635020973">Craig Kanalley</a></p>
     </div>
 </li>
+
+-->
 
 </ul> 
 
