--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 12;    
+    var randomStart = 14;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -46,7 +46,7 @@ jQuery(document).ready(function() {
         <img src="http://a3.twimg.com/profile_images/280449779/newthumb.jpg" width="128" height="128" alt="" />
         <p><strong>Mindy McAdams</strong><br/>
             <a href="http://twitter.com/macloo">@macloo</a><br/>
-            <a href="http://mindymcadams.com">mindymcadams.com</a></em>
+            <a href="http://mindymcadams.com">mindymcadams.com</a>
         </p>
     </div>
     <div class="text">
@@ -207,10 +207,9 @@ jQuery(document).ready(function() {
 <p><strong>Twitter bio: </strong>I teach journalism at NYU, direct the Studio 20 program there, critique the press and try to grok new media. I don't do lifecasting but mindcasting on Twitter.</p>
 <p><strong> Nominated by: Dorian Benkoil (@dbenk), Tish Grier (@tishgrier)</strong> </p>
         <p>"@jayrosen_nyu succinctly sums up complex issues, points to his own writing and others', stokes and advances important debate." -- <a href="http://twitter.com/#!/dbenk/statuses/27192482924">Dorian Benkoil</a></p>
+        <p>"Jay Rosen taught at a Poynter seminar on blogging. He had shifted much of his attention from blogging to Twitter and described how it enabled him to spread his ideas and interact with people about them. He explained how carefully he crafted his tweets and how he decided what to tweet (ideas and links he found interesting) and what not to tweet (his dietary intake). And he was up-front about a key reason he used Twitter: to gain influence. With 41,500 followers now, I think he's accomplished that." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=427506036861&comments">Steve Myers</a></p>
     </div>
 </li>
-
-<!--
 
 <li>
     <div class="photo">
@@ -244,6 +243,8 @@ jQuery(document).ready(function() {
     </div>
 </li>
 
+<!--
+
 <li>
     <div class="photo">
         <img src="http://a1.twimg.com/profile_images/1020891865/mbiconicon_reasonably_small.jpg" width="128" height="128" alt="" />
@@ -255,7 +256,7 @@ jQuery(document).ready(function() {
     <div class="text">
 <p><strong>Twitter bio: </strong>Columbia J-school prof/dean & technology evangelist/skeptic; contributing editor, DNAinfo.com * tweeting about tech, media and more.</p>
 <p><strong>Nominated by: Emily Sweeney (@emilysweeney), Craig Kanalley (@ckanal), Kim Bui (@kimbui), Niketa Patel (@niketa)</strong> </p>
-        <p>"I have admired Sree for years because he continually innovates. Sree also has a knack for connecting people with similar interests. I started to reach out to Sree for advice and have been following his career path since I joined the South Asian Journalists Association many years ago. Sree is always sharing valuable tech tips, job postings and wisdom. Sree inspired me to dabble in Linkedin and Twitter." --  <a href="http://www.facebook.com/notes/niketa-patel/poynters-35-influential-people-in-social-media/10150298045925641">Niketa Patel </a></p>
+        <p>"I have admired Sree for years because he continually innovates. Sree also has a knack for connecting people with similar interests. I started to reach out to Sree for advice and have been following his career path since I joined the South Asian Journalists Association many years ago. Sree is always sharing valuable tech tips, job postings and wisdom. Sree inspired me to dabble in Linkedin and Twitter." DASHDASH  <a href="http://www.facebook.com/notes/niketa-patel/poynters-35-influential-people-in-social-media/10150298045925641">Niketa Patel </a></p>
     </div>
 </li>
 
@@ -274,7 +275,7 @@ jQuery(document).ready(function() {
     <div class="text">
 <p><strong>Twitter bio: </strong></p>
 <p><strong> Nominated by Craig Kanalley (@ckanal) and Mandy Jenkins (@mjenkins)</strong> </p>
-        <p>BLAH BLAH -- <a href="NOMINATEURL">NOMINATOR</a></p>
+        <p>BLAH BLAH dashdash <a href="NOMINATEURL">NOMINATOR</a></p>
     </div>
 </li>
 
