--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 14;    
+    var randomStart = 21;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -243,8 +243,6 @@ jQuery(document).ready(function() {
     </div>
 </li>
 
-<!--
-
 <li>
     <div class="photo">
         <img src="http://a1.twimg.com/profile_images/1020891865/mbiconicon_reasonably_small.jpg" width="128" height="128" alt="" />
@@ -256,11 +254,99 @@ jQuery(document).ready(function() {
     <div class="text">
 <p><strong>Twitter bio: </strong>Columbia J-school prof/dean & technology evangelist/skeptic; contributing editor, DNAinfo.com * tweeting about tech, media and more.</p>
 <p><strong>Nominated by: Emily Sweeney (@emilysweeney), Craig Kanalley (@ckanal), Kim Bui (@kimbui), Niketa Patel (@niketa)</strong> </p>
-        <p>"I have admired Sree for years because he continually innovates. Sree also has a knack for connecting people with similar interests. I started to reach out to Sree for advice and have been following his career path since I joined the South Asian Journalists Association many years ago. Sree is always sharing valuable tech tips, job postings and wisdom. Sree inspired me to dabble in Linkedin and Twitter." DASHDASH  <a href="http://www.facebook.com/notes/niketa-patel/poynters-35-influential-people-in-social-media/10150298045925641">Niketa Patel </a></p>
+        <p>"I have admired Sree for years because he continually innovates. Sree also has a knack for connecting people with similar interests. I started to reach out to Sree for advice and have been following his career path since I joined the South Asian Journalists Association many years ago. Sree is always sharing valuable tech tips, job postings and wisdom. Sree inspired me to dabble in Linkedin and Twitter." --  <a href="http://www.facebook.com/notes/niketa-patel/poynters-35-influential-people-in-social-media/10150298045925641">Niketa Patel </a></p>
     </div>
 </li>
 
--->
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/67612383/XWS147_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Burt Herman</strong><br/>
+            <a href="http://www.twitter.com/burtherman">@burtherman</a><br/>
+            <a href="http://burtherman.com/">burtherman.com/</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Entrepreneurial journalist finding meaning in the noise. CEO of Storify, founder of Hacks/Hackers for journalists and technologists.</p>
+<p><strong> Nominated by Sarah Fidelibus (@verbalcupcake)</strong> </p>
+        <p>"In addition to being the CEO of Storify, a tool through which people turn the information they source from social media into a compelling piece of journalism that tells a complete story, Herman is also founder of Hacks/Hackers, which brings journalists and technologists together to learn from one another. Since its launch in the Bay Area, Hacks/Hackers has held meetups in cities across the U.S. and in the U.K., clearly demonstrating how hungry people are for the kinds of networking and learning opportunities that these meetups provide. By providing the space -- both virtual and physical -- for journalists and techies to learn from one another, Herman's Hacks/Hackers helps to empower those who want to learn more about the integration of these two enterprises." -- <a href="http://sarahfidelibus.posterous.com/my-picks-for-poynters-p35-influential-people">Sarah Fidelibus </a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a0.twimg.com/profile_images/1112051048/scharwath_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Longshot Magazine</strong><br/>
+            <a href="http://www.twitter.com/longshotmag">@longshotmag</a><br/>
+            <a href="http://longshotmag.com/">longshotmag.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Welcome to Longshot Magazine, a raucous experiment in using new tools to erase media's old limits. We're going to write, design, edit, and ship a mag in 2 days.</p>
+<p><strong> Nominated by Ellyn Angelotti (@ellynangelotti)</strong> </p>
+        <p>"Initially I thought this idea was brilliant because I thought their product would be a great way to memorialize a lot of the amazing ideas and thoughts people share in the very fluid social media world -- and it is! But it's also so much more. After talking more with Mathew about Longshot's process and workflow, I have even more respect for this great website/magazine/idea because of its ability to harness the power and velocity of the crowd while ensuring quality and standards are a priority. Obtaining this unique balance of two values results in Longshot being an up-and-coming innovative, interesting and credible voice in media. (The Longshot editors  (Mathew Honan <a href="http://www.twitter.com/mat">@mat </a>, Alexis Madrigal <a href="http://www.twitter.com/alexismadrigal">@alexismadrigal</a>, and Sarah Rich <a href="http://www.twitter.com/sarahrich">@sarahrich</a>) will Skype in as speakers for Poynter's Nov. 5 event) -- <a href="http://www.facebook.com/notes.php?id=16802076&notes_tab=app_2347471856#!/note.php?note_id=422518584332">Ellyn Angelotti</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a1.twimg.com/profile_images/787111681/manfull3_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Aaron Manfull</strong><br/>
+            <a href="http://www.twitter.com/manfull">@manfull</a><br/>
+            <a href="http://jeadigitalmedia.org">jeadigitalmedia.org</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Dad. Husband. Iowa Hawkeye Fan. JEA Digital Media Chair. Teacher. Journalism Adviser in St. Louis. Iowan forever.</p>
+<p><strong> Nominated by: Wendy Wallace (@weywallace)</strong> </p>
+        <p>"Aaron is the champion of jeadigitalmedia.org, a site that guides high school journalists and journalism advisers in their quest to create an engaging, interactive presence online. He built it, runs it, posts regularly on it and teaches and preaches the tools of digital media at every opportunity.  He is chair of the digital media committee for the Journalism Education Association. He leads workshops. And he advises a talented staff of teens at Francis Howell North High School outside St. Louis, Mo., in their own digital efforts, at http://www.fhntoday.com/. They not only have a Twitter feed (which announced Homecoming king and queen, for example), but they have a special sports Twitter feed that informs followers of action during games." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=480782868454"> Wendy Wallace</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a1.twimg.com/profile_images/974707341/Lisa_Stone_2010_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Lisa Stone</strong><br/>
+            <a href="http://www.twitter.com/lisastone">@lisastone</a><br/>
+            <a href="http://blogher.com/blog/lisa-stone">blogher.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>BlogHer Co-founder and CEO, shameless user advocate.</p>
+<p><strong>Nominated by: Ellyn Angelotti (@ellynangelotti)</strong> </p>
+        <p>"Lisa's been one of my role models since I met her back in 2005. I was just learning how to blog, and she had just launched BlogHer. Her thoughtful approach to discussing important issues facing women in the tech world has inspired me to think more deeply about the work I do. (Lisa will be a speaker at <a href="https://poynter.site-ym.com/store/view_product.asp?id=576837">Poynter's Nov. 5 event."</a>) -- <a href="http://www.facebook.com/#!/note.php?note_id=422518584332"></a> Ellyn Angelotti</p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/1148453331/clark140_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Stephen Clark</strong><br/>
+            <a href="http://www.twitter.com/sclarkwxyz">@sclarkwxyz</a><br/>
+            <a href="http://sclarkwxyz.wordpress.com/">blog</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>WXYZ TV/ABC Detroit Interactive Anchor by night...Singer/songwriter later at night Blogger constantly ex band geek, tech geek, geeky dad to teenage daughters.</p>
+<p><strong>Nominated by: Janet Hug (@jkissnhug), Charlie Wollborg (@charliecurve) and Amy Guild Mcgraw</strong> </p>
+        <p>"If you are truly looking for influencers and those finding new ways to use social media to affect positive change in journalism....look no further than Stephen Clark @sclarkwxyz of Detroit." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=440299581746">Amy Guild Mcgraw </a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/723748499/MarkBriggs_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Mark Briggs</strong><br/>
+            <a href="http://www.twitter.com/markbriggs">@markbriggs</a><br/>
+            <a href="http://www.journalism20.com/blog">journalism20.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Author of Journalism 2.0 and Journalism Next. Co-founder of Serra Media and GonzoCamp.</p>
+<p><strong> Nominated by: Ellyn Angelotti (@ellynangelotti)</strong> </p>
+        <p>"Mark is passionate about helping people understand the practical and strategic applications of social media in journalism. He's helped push me beyond simply being satisfied with having an awareness of new tools and encouraged me to search for a deeper understanding of the value social media adds to the work we do -- and the business potential it has." -- <a href="http://www.facebook.com/#!/note.php?note_id=422518584332">Ellyn Angelotti</a></p>
+    </div>
+</li>
 
 <!--
 
