--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 21;    
+    var randomStart = 22;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -268,7 +268,7 @@ jQuery(document).ready(function() {
     </div>
     <div class="text">
 <p><strong>Twitter bio: </strong>Entrepreneurial journalist finding meaning in the noise. CEO of Storify, founder of Hacks/Hackers for journalists and technologists.</p>
-<p><strong> Nominated by Sarah Fidelibus (@verbalcupcake)</strong> </p>
+<p><strong> Nominated by: Sarah Fidelibus (@verbalcupcake)</strong> </p>
         <p>"In addition to being the CEO of Storify, a tool through which people turn the information they source from social media into a compelling piece of journalism that tells a complete story, Herman is also founder of Hacks/Hackers, which brings journalists and technologists together to learn from one another. Since its launch in the Bay Area, Hacks/Hackers has held meetups in cities across the U.S. and in the U.K., clearly demonstrating how hungry people are for the kinds of networking and learning opportunities that these meetups provide. By providing the space -- both virtual and physical -- for journalists and techies to learn from one another, Herman's Hacks/Hackers helps to empower those who want to learn more about the integration of these two enterprises." -- <a href="http://sarahfidelibus.posterous.com/my-picks-for-poynters-p35-influential-people">Sarah Fidelibus </a></p>
     </div>
 </li>
@@ -283,7 +283,7 @@ jQuery(document).ready(function() {
     </div>
     <div class="text">
 <p><strong>Twitter bio: </strong>Welcome to Longshot Magazine, a raucous experiment in using new tools to erase media's old limits. We're going to write, design, edit, and ship a mag in 2 days.</p>
-<p><strong> Nominated by Ellyn Angelotti (@ellynangelotti)</strong> </p>
+<p><strong> Nominated by: Ellyn Angelotti (@ellynangelotti)</strong> </p>
         <p>"Initially I thought this idea was brilliant because I thought their product would be a great way to memorialize a lot of the amazing ideas and thoughts people share in the very fluid social media world -- and it is! But it's also so much more. After talking more with Mathew about Longshot's process and workflow, I have even more respect for this great website/magazine/idea because of its ability to harness the power and velocity of the crowd while ensuring quality and standards are a priority. Obtaining this unique balance of two values results in Longshot being an up-and-coming innovative, interesting and credible voice in media. (The Longshot editors  (Mathew Honan <a href="http://www.twitter.com/mat">@mat </a>, Alexis Madrigal <a href="http://www.twitter.com/alexismadrigal">@alexismadrigal</a>, and Sarah Rich <a href="http://www.twitter.com/sarahrich">@sarahrich</a>) will Skype in as speakers for Poynter's Nov. 5 event) -- <a href="http://www.facebook.com/notes.php?id=16802076&notes_tab=app_2347471856#!/note.php?note_id=422518584332">Ellyn Angelotti</a></p>
     </div>
 </li>
@@ -345,6 +345,22 @@ jQuery(document).ready(function() {
 <p><strong>Twitter bio: </strong>Author of Journalism 2.0 and Journalism Next. Co-founder of Serra Media and GonzoCamp.</p>
 <p><strong> Nominated by: Ellyn Angelotti (@ellynangelotti)</strong> </p>
         <p>"Mark is passionate about helping people understand the practical and strategic applications of social media in journalism. He's helped push me beyond simply being satisfied with having an awareness of new tools and encouraged me to search for a deeper understanding of the value social media adds to the work we do -- and the business potential it has." -- <a href="http://www.facebook.com/#!/note.php?note_id=422518584332">Ellyn Angelotti</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/466903371/bostonmug95.jpg" width="128" height="128" alt="" />
+        <p><strong>Ryan Sholin</strong><br/>
+            <a href="http://www.twitter.com/ryansholin">@ryansholin</a><br/>
+            <a href="http://ryansholin.com">ryansholin.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Product Manager, Local Sites at Gannett Digital. I make/do/talk about cool things for journalists. Also, a lot of parenting. And some humor, if I'm lucky.</p>
+<p><strong>Nominated by: Craig Kanalley (@ckanal)</strong> </p>
+        <p>"He's become one of the most active and most respected journalism voices in the Twitterverse ... I've learned a lot from Ryan, particularly during his time at Publish2, a curation and journalism tool that is so important for the info-cluttered world of today. He's smart, he's creative, and he's filled with ideas -- a person you can really learn a lot from. He's taught me the importance of innovation and trying new things and never settling for less than that."  -- <a href="http://www.facebook.com/note.php?note_id=436635020973"></a>Craig Kanalley 
+        </p>
     </div>
 </li>
 
