Matt Waite and Victor Hernandez.

--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 22;    
+    var randomStart = 25;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -361,6 +361,51 @@ jQuery(document).ready(function() {
 <p><strong>Nominated by: Craig Kanalley (@ckanal)</strong> </p>
         <p>"He's become one of the most active and most respected journalism voices in the Twitterverse ... I've learned a lot from Ryan, particularly during his time at Publish2, a curation and journalism tool that is so important for the info-cluttered world of today. He's smart, he's creative, and he's filled with ideas -- a person you can really learn a lot from. He's taught me the importance of innovation and trying new things and never settling for less than that."  -- <a href="http://www.facebook.com/note.php?note_id=436635020973"></a>Craig Kanalley 
         </p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a2.twimg.com/profile_images/1090900598/chip-closeup-640x_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Chip Mahaney</strong><br/>
+            <a href="http://www.twitter.com/ChipMahaney">@ChipMahaney</a><br/>
+            <a href="http://chipmahaney.com">chipmahaney.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Web content guy for Scripps TV. RTDNA board of directors. N8V TXN, husband 21 yrs, dad 2x. Love Tex-Mex &amp; running. Fan of Cowboys, Bengals, Rangers, Reds.</p>
+<p><strong> Nominated by Jill Geisler (@jillgeisler)</strong> </p>
+        <p>"Nominating @ChipMahaney, who does a terrific job teaching social media strategies for journalists -- with passion and fun." -- <a href="http://twitter.com/#!/JillGeisler/status/28833415842">Jill Geisler</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://t1.gstatic.com/images?q=tbn:ANd9GcQ57kpCNXSp1ffPPRPc2YaFk-vdByFOrFkMHQcqz7e_zi6-nFk&t=1&usg=__U4Fu6MioB2sUGV5X-K-Bs319Nvg=" width="128" height="128" alt="" />
+        <p><strong>Matt Waite</strong><br/>
+            <a href="http://www.twitter.com/mattwaite">@mattwaite</a><br/>
+            <a href="http://www.mattwaite.com/">mattwaite.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Senior News Technologist at the St. Petersburg Times, developer of the Pulitzer Prize winning PolitiFact.com, Django developer, father, Nebraskan.</p>
+<p><strong> Nominated by Craig Kanalley (@ckanal) and Mandy Jenkins (@mjenkins)</strong> </p>
+        <p>"Nobody's more sarcastic, funnier or makes j programming seem so hellish, yet appealing." -- <a href="http://twitter.com/#!/reginajmc/statuses/28825065167">Regina McCombs</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/1102005543/bw_pic_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Victor Hernandez</strong><br/>
+            <a href="http://www.twitter.com/vhernandezcnn">@vhernandezcnn</a><br/>
+            <a href="http://www.cnn.com">cnn.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>CNN All Platform Journalist program manager. Social Media &amp; Tech enthusiast. Interested in Future of Journalism and other complicated matters.</p>
+<p><strong>Nominated by: Jill Geisler (@JillGeisler)</strong> </p>
+        <p>"Early adopter and leader of social media among journalists." -- <a href="http://twitter.com/#!/JillGeisler/status/28833276799">Jill Geisler</a></p>
     </div>
 </li>
 
