--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 25;    
+    var randomStart = 26;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -406,6 +406,21 @@ jQuery(document).ready(function() {
 <p><strong>Twitter bio: </strong>CNN All Platform Journalist program manager. Social Media &amp; Tech enthusiast. Interested in Future of Journalism and other complicated matters.</p>
 <p><strong>Nominated by: Jill Geisler (@JillGeisler)</strong> </p>
         <p>"Early adopter and leader of social media among journalists." -- <a href="http://twitter.com/#!/JillGeisler/status/28833276799">Jill Geisler</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a1.twimg.com/profile_images/112990553/n1230237_40813141_5536_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Mark Luckie</strong><br/>
+            <a href="http://www.twitter.com/marksluckie">@marksluckie</a><br/>
+            <a href="http://www.getluckie.net">getluckie.net</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Author of the multimedia journalism blog 10,000 Words and The Digital Journalist's Handbook. Fan of all things awesome.</p>
+<p><strong>Nominated by: National Association of Black Journalists' Digital Journalism Task Force (@NABJDigital)</strong> </p>
+        <p>"MUST include @10000Words/@marksluckie, who literally wrote the book on digital #journalism." -- <a href="http://twitter.com/NABJDigital/statuses/28745397401">@NABJ Digital</a></p>
     </div>
 </li>
 
