--- a/35influencers.html
+++ b/35influencers.html
@@ -13,7 +13,7 @@
  
 jQuery(document).ready(function() {
     // var randomStart = Math.floor(12*Math.random());
-    var randomStart = 26;    
+    var randomStart = 30;    
     $('a').attr('target', '_blank');
     jQuery('#mycarousel').jcarousel({
         scroll: 1,
@@ -421,6 +421,66 @@ jQuery(document).ready(function() {
 <p><strong>Twitter bio: </strong>Author of the multimedia journalism blog 10,000 Words and The Digital Journalist's Handbook. Fan of all things awesome.</p>
 <p><strong>Nominated by: National Association of Black Journalists' Digital Journalism Task Force (@NABJDigital)</strong> </p>
         <p>"MUST include @10000Words/@marksluckie, who literally wrote the book on digital #journalism." -- <a href="http://twitter.com/NABJDigital/statuses/28745397401">@NABJ Digital</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/77279763/244x244me_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Jim Long</strong><br/>
+            <a href="http://www.twitter.com/newmediajim">@newmediajim</a><br/>
+            <a href="http://www.vergenewmedia.com">vergenewmedia.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>New media soul trapped in an old media body.</p>
+<p><strong>Nominated by: Barbara French (@bfr3nch)</strong></p>
+        <p>"He uses social media to show human side of breaking nat'l coverage." -- <a href="http://twitter.com/#!/bfr3nch/status/29016356042">Barbara French</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/74817011/mbl_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Melissa Lyttle</strong><br/>
+            <a href="http://www.twitter.com/melissalyttle">@melissalyttle</a><br/>
+            <a href="http://www.thelifeofm.com">thelifeofm.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Photojournalist.</p>
+<p><strong>Nominated by: Steve Myers (@myersnews)</strong> </p>
+        <p>"Shortly after I met her in 2007, I was on Facebook and 'poked' her. It elicited the same startled reaction as if I had seen her in the grocery store, walked up behind her and poked her. Some things aren't that different in social media I guess." -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=427506036861">Steve Myers</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a1.twimg.com/profile_images/75250461/Wade-square_reasonably_small.jpg" width="128" height="128" alt="" />
+        <p><strong>Wade Kwon</strong><br/>
+            <a href="http://www.twitter.com/wadeontweets">@wadeontweets</a><br/>
+            <a href="http://wadeonbirmingham.com">wadeonbirmingham.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Birmingham-based communications consultant. Plus, writer, editor, journalist, raconteur, teacher, gentleman. BirminghamBlogging.com, WadeKwon.com.</p>
+<p><strong>Nominated by: Dave Sharp (@davesharpontv)</strong> </p>
+        <p>"I nominate Birmingham's social media monster @WadeOnTweets as one of your 35 Influential People in Social Media." -- <a href="http://twitter.com/#!/davesharpontv/status/25234617480">Dave Sharp</a></p>
+    </div>
+</li>
+
+<li>
+    <div class="photo">
+        <img src="http://a3.twimg.com/profile_images/1128583087/gravatar1_reasonably_small.png" width="128" height="128" alt="" />
+        <p><strong>Baristanet</strong><br/>
+            <a href="http://www.twitter.com/baristanet">@baristanet</a><br/>
+            <a href="http://www.baristanet.com">baristanet.com</a>
+        </p>
+    </div>
+    <div class="text">
+<p><strong>Twitter bio: </strong>Your Local, Homegrown Online Community Since 2004 - Serving Montclair, Bloomfield, Glen Ridge, Maplewood, Millburn, South Orange and West Orange.</p>
+<p><strong>Nominated by: Tish Grier (@tishgrier)</strong> </p>
+        <p>"Not only did they start one of the first hyperlocal sites to become sustainable, they've also done a number of things to serve the community that would be considered "social" -- such as finding a way to bring real-time traffic reports to their community &amp; site, use Twitter &amp; Facebook before many others, and if you asked them, I think there are probably a bunch of ideas that they had before the technology was available. -- <a href="http://www.facebook.com/notes.php?id=122407694453913&notes_tab=app_2347471856#!/note.php?note_id=148311165208907&comments">Tish Grier</a></p>
     </div>
 </li>
 
